WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283550
[GTK][WPE] Fix layout test crashes when damaging is used
https://bugs.webkit.org/show_bug.cgi?id=283550
Summary
[GTK][WPE] Fix layout test crashes when damaging is used
Pawel Lampe
Reported
2024-11-22 00:21:49 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Pawel Lampe
Comment 1
2024-11-22 00:26:37 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37006
EWS
Comment 2
2024-11-22 11:15:41 PST
Committed
286971@main
(9d70b1790b90): <
https://commits.webkit.org/286971@main
> Reviewed commits have been landed. Closing PR #37006 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug