[GTK][WPE] Fix layout test crashes when damaging is used https://bugs.webkit.org/show_bug.cgi?id=283550

Reviewed by Adrian Perez de Castro.

This change adds a missing nullptr check.

* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/CoordinatedGraphicsScene.cpp:
(WebKit::CoordinatedGraphicsScene::paintToCurrentGLContext):

Canonical link: https://commits.webkit.org/286971@main